# para

./: .ai_session.md  .env.example  .gitignore  Makefile  docker-compose.yml  plan.md  pyrightconfig.json
server/: Dockerfile  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/app/: main.py
server/tests/: conftest.py  test_admin_users_debug_allowed.py  test_auth.py  test_bootstrap_admin_user_script.py  test_db.py  test_health.py  test_task_11_embedding_routing_and_reembed.py  test_task_11_memory_search.py  test_task_12_dream_event.py  test_task_12_pgvector_ann_indexes.py  test_task_13_knowledge_query.py  test_task_15_vision_screenshot.py  test_task_16_sensors_event.py  test_task_17_gallery.py  test_task_18_timeline.py  test_task_19_appenc_login.py  test_task_19_room_event.py  test_task_1_2_no_request_path_ddl.py  test_task_1_4_prod_config.py  test_task_20_invite_codes.py  test_task_20_ugc_approve.py  test_task_21_plugins.py  test_task_22_admin_flags.py  test_task_23_privacy_audit.py  test_task_2_0_bootstrap_admin_registration.py  test_task_2_1_ws_eventstore.py  test_task_2_2_ws_redis_notify.py  test_task_2_3_ws_save_ownership_and_limits.py  test_task_3_1_auth_rate_limit.py  test_task_3_2_auth_password_reset_and_email_normalization.py  test_task_3_4_upload_limits.py  test_task_3_5_audit_logs_list.py  test_task_4_2_llm_usage_metrics.py  test_task_4_version_header.py  test_task_5_2_admin_review_queue.py  test_task_5_3_admin_web_deploy_security.py  test_task_6_5_app_encryption.py  test_task_9_admin_llm_channels.py  test_task_9_save_isolation.py  (+3 more)
(+261 files in other folders)
