[project]
name = "para-server"
version = "0.2.0"
description = "FastAPI server scaffold for para."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "celery[redis]>=5.3.6",
  "cryptography>=42.0.0",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.0.0",
  "pydantic-settings>=2.2.0",
  "psycopg[binary]>=3.1.0",
  "sqlalchemy>=2.0.0",
  "uvicorn>=0.27.0",
  "websockets>=12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
